# elib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DEPENDECIES.md  LICENSE  NAMING.md  README.md
.github/workflows/: cmake-multi-platform.yml  cmake_multiplatform.yml
cmake/: gnu-toolchain.cmake  msvc-toolchain.cmake  version.h.in
include/elib/: algorithm.h  array.h  assert.h  callback.h  circular_buffer.h  config.h  event_loop.h  expected.h  function_ref  inplace_function.h  kernel.h  list.h  memory.h  optional.h  scope.h  span.h  stream.h  task.h  utility.h  version.h
include/elib/time/: core_clock.h  deadline_timer.h  elapsed_timer.h  system_clock.h  timer.h
qt/: elib.pri
src/: CMakeLists.txt  event_loop.cpp  kernel.cpp  task.cpp
src/time/: system_clock.cpp  timer.cpp
tests/: CMakeLists.txt  algorithm.cpp  aligned_storage.cpp  array.cpp  circular_buffer.cpp  event_loop.cpp  external.cpp  kernel.cpp  list.cpp  scope.cpp  stream.cpp  timer.cpp
tests/host/: elib.tweaks.h
tests/mock/: assert.cpp  assert.h
vs/elib/: elib.sln  elib.vcxitems  elib.vcxitems.filters
